[gd_scene load_steps=4 format=3 uid="uid://du0rooh8p8epx"]

[ext_resource type="Script" path="res://effects/wave.gd" id="1_usda4"]
[ext_resource type="Texture2D" uid="uid://br8y8ffns34fj" path="res://effects/toppng.com-sound-wave-circle-wave-400x400.png" id="2_f2pvf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ljyoh"]
radius = 1400.0

[node name="wave" type="Node2D"]
z_index = 1
script = ExtResource("1_usda4")

[node name="Wave" type="Sprite2D" parent="."]
position = Vector2(0, 5.96046e-08)
rotation = -2.53073
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_f2pvf")

[node name="Area2D" type="Area2D" parent="Wave"]
rotation = 2.53073
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wave/Area2D"]
shape = SubResource("CircleShape2D_ljyoh")

[node name="cast_time" type="Timer" parent="." groups=["waves"]]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Wave/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="cast_time" to="." method="_on_cast_time_timeout"]
